[build-system]
requires = ["setuptools>=62.6"]
build-backend = "setuptools.build_meta"

[project]
name = "morai"
description = "A mortality viewer"
dynamic = ["version"]
authors = [{ name = "John Koestner", email = "johnkoestner@outlook.com" }]
readme = 'README.md'
license = { file = 'LICENSE.md' }
requires-python = '>=3.9'

dependencies = [
    "arrow>=1.3.0",
    "colorama>=0.4.6",
    "dash-ag-grid>=31.0.1",
    "dash-bootstrap-components>=1.5.0",
    "graphviz>=0.20.1",                 # only for lightgbm
    "jupyterlab>=4.0.10",
    "lightgbm>=4.3.0",                  # only for lightgbm
    "numpy>=1.24.4",
    "pandas>=2.0.3",
    "plotly>=5.19.0",
    "polars>=0.20.9",
    "pyarrow>=14.0.2",
    "pymort>=2.0.1",
    "scikit-learn>=1.4",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.1",
    "xgboost>=2.0.3",                   # only for xgboost
]

[project.optional-dependencies]
dev = [
    "black>=23.12.1",
    "isort>=5.13.2",
    "jupyterlab-code-formatter>=2.2.1",
    "jupyter-resource-usage>=1.0.1",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.11",
    "sphinx>=6.0, <7.2",
    "sphinx_rtd_theme>=1.2.2",
]

[project.urls]
homepage = "https://github.com/jkoestner/morai"
repository = "https://github.com/jkoestner/morai"

# TODO: Remove after setuptools support is dropped.
[tool.setuptools]
include-package-data = true # include files from MANIFEST.in

[tool.setuptools.packages.find]
exclude = ["tests*"]

[tool.setuptools.dynamic]
version = { attr = "morai.version.version" }


[tool.ruff]
line-length = 88
fix = false
unfixable = []
extend-include = ["*.ipynb"]

select = [
    # pyflakes
    "F",
    # pycodestyle
    "E",
    "W",
    # isort
    "I",
    # pydocstyle
    "D",
    # flake8-2020
    "YTT",
    # flake8-bugbear
    "B",
    # flake8-quotes
    "Q",
    # flake8-debugger
    "T10",
    # flake8-gettext
    "INT",
    # pylint
    "PL",
    # misc lints
    "PIE",
    # flake8-pyi
    "PYI",
    # tidy imports
    "TID",
    # implicit string concatenation
    "ISC",
    # type-checking imports
    "TCH",
    # comprehensions
    "C4",
    # pygrep-hooks
    "PGH",
    # Ruff-specific rules
    "RUF",
    # flake8-bandit: exec-builtin
    "S102",
    # numpy-legacy-random
    "NPY002",
    # Perflint
    "PERF",
    # flynt
    "FLY",
    # flake8-logging-format
    "G",
]

ignore = [
    ### Intentionally disabled
    # logging statement uses f-string
    "G004",
    # ignore __init__ docstring
    "D107",
    # these are conflicting errors
    "D203",
    "D212",
    # ignore == False vs is False due to pandas series
    "E712",
    "ISC001",
    # ruff too many branches and too many statements
    "PLR0912",
    "PLR0913",
    "PLR0915",
    # ruff ignore magic values
    "PLR2004",
]

[tool.ruff.lint]
exclude = ["*.ipynb"]
pylint.max-args = 10
