[build-system]
requires = ["setuptools>=62.6"]
build-backend = "setuptools.build_meta"

[project]
name = "morai"
description = "A mortality viewer"
dynamic = ["version"]
authors = [{ name = "John Koestner", email = "johnkoestner@outlook.com" }]
readme = 'README.md'
license = { file = 'LICENSE.md' }
requires-python = '>=3.12'

dependencies = [
    "arrow>=1.3.0",
    "colorama>=0.4.6",
    "fastexcel>=0.13.0",                # only for polars
    "ipywidgets>=8.1.5",
    "jupyterlab>=4.3.6",
    "numpy>=1.26.4",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "polars>=1.26.0",
    "pyarrow>=19.0.1",
    "pymort>=2.0.1",
    "scikit-learn>=1.6.1",                # h-statistic available in https://github.com/scikit-learn/scikit-learn/pull/28375
    "seaborn>=0.13.2",
    "shap>=0.47.0",
    "statsmodels>=0.14.4",
    "tqdm>=4.67.1",

    # dashboard
    "dash>=3.0.1",                     # only for dash
    "dash-ag-grid>=31.3.1",             # only for dash
    "dash-bootstrap-components>=2.0.0", # only for dash
    "dash-extensions>=1.0.20",          # only for dash
    "gunicorn>=23.0.0",                 # only for dash

    # models
    "catboost>=1.2.7",                  # only for catboost
    "graphviz>=0.20.3",                 # only for lightgbm
    "lightgbm>=4.6.0",                  # only for lightgbm
    "xgboost>=3.0.0",                   # only for xgboost
]

[project.optional-dependencies]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "jupyterlab-code-formatter>=3.0.2",
    "jupyter-resource-usage>=1.1.1",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "ruff>=0.11.0",
    "sphinx>=6.0, <7.2",
    "sphinx_rtd_theme>=3.0.2",
]

ai_adv = [
    "h2o>=3.46.0",                      # only for h2o
    "pytorch>=2.0.1",                   # only for neural network class
]

[project.scripts]
morai = "morai.utils.cli:cli" # the entry points provide console scripts at command line

[project.urls]
homepage = "https://github.com/jkoestner/morai"
repository = "https://github.com/jkoestner/morai"

# TODO: Remove after setuptools support is dropped.
[tool.setuptools]
include-package-data = true # include files from MANIFEST.in

[tool.setuptools.packages.find]
exclude = ["tests*"]

[tool.setuptools.dynamic]
version = { attr = "morai.version.version" }

# coverage config file for pytest-cov coming from
# https://pytest-cov.readthedocs.io/en/latest/
# run using pytest --cov=morai --cov-report=html
[tool.coverage.run]
data_file = "docs/coverage/.coverage"
omit = [
    "morai/dashboard/*", # omit everything in /dashboard
    "__init__.py",       # omit init files
]

[tool.coverage.html]
directory = "docs/coverage/htmlcov"

[tool.ruff]
line-length = 88
fix = false
unfixable = []
extend-include = ["*.ipynb"]

select = [
    # pyflakes
    "F",
    # pycodestyle
    "E",
    "W",
    # isort
    "I",
    # pydocstyle
    "D",
    # flake8-2020
    "YTT",
    # flake8-bugbear
    "B",
    # flake8-quotes
    "Q",
    # flake8-debugger
    "T10",
    # flake8-gettext
    "INT",
    # pylint
    "PL",
    # misc lints
    "PIE",
    # flake8-pyi
    "PYI",
    # tidy imports
    "TID",
    # implicit string concatenation
    "ISC",
    # type hint
    "ANN",
    # comprehensions
    "C4",
    # pygrep-hooks
    "PGH",
    # Ruff-specific rules
    "RUF",
    # flake8-bandit: exec-builtin
    "S102",
    # numpy-legacy-random
    "NPY002",
    # Perflint
    "PERF",
    # flynt
    "FLY",
    # flake8-logging-format
    "G",
]

ignore = [
    ### Intentionally disabled
    # type hinting exceptions
    "ANN002",
    "ANN003",
    "ANN101",
    "ANN401",
    # ignore __init__ docstring
    "D107",
    # these are conflicting errors
    "D203",
    "D212",
    # ignore == False vs is False due to pandas series
    "E712",
    # logging statement uses f-string
    "G004",
    # ignore f-string in logging statement
    "ISC001",
    # ruff too many branches and too many statements
    "PLR0912",
    "PLR0913",
    "PLR0915",
    # ruff ignore magic values
    "PLR2004",
]

[tool.ruff.lint]
exclude = ["*.ipynb", "__init__.py"]
pylint.max-args = 10

[tool.ruff.lint.per-file-ignores]
"morai/dashboard/pages/*.py" = ["ANN", "E501"]
"tests/*.py" = ["ANN201"]
